testdata/baselines/reference/submodule/conformance/moduleExportAliasExports.errors.txt
Eloquent.js(3,9): error TS2339: Property 'bigOak' does not exist on type 'typeof import("Eloquent")'.
Eloquent.js(4,9): error TS2339: Property 'everywhere' does not exist on type 'typeof import("Eloquent")'.
Eloquent.js(5,1): error TS1231: An export assignment must be at the top level of a file or module declaration.
Eloquent.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== Eloquent.js (4 errors) ====
    // bug #27365, crashes from github.com/marijnh/Eloquent-JavaScript
    (function() {
    exports.bigOak = 1
            ~~~~~~
!!! error TS2339: Property 'bigOak' does not exist on type 'typeof import("Eloquent")'.
    exports.everywhere = 2
            ~~~~~~~~~~
!!! error TS2339: Property 'everywhere' does not exist on type 'typeof import("Eloquent")'.
    module.exports = exports
    ~~~~~~
!!! error TS1231: An export assignment must be at the top level of a file or module declaration.
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    })()
    